[package]
name = "hagrid"
version = "1.1.0"
authors = ["Vincent Breitmoser <look@my.amazin.horse>", "Kai Michaelis <kai@sequoia-pgp.org>", "Justus Winter <justus@sequoia-pgp.org>"]
build = "build.rs"
default-run = "hagrid"
edition = "2018"

[workspace]
members = [
    "database",
    "hagridctl",
]

[dependencies]
hagrid-database = { path = "database" }
chrono = "0.4.10"
anyhow = "1"
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
rocket_codegen = "0.5.0-rc.1"
sequoia-openpgp =  { version = "1", default-features = false, features = ["crypto-nettle"] }
multipart = "0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
structopt = "0.2"
url = "1.6"
handlebars = "3"
num_cpus = "1.0"
ring = "0.13"
base64 = "0.10"
uuid = { version = "0.7", features = [ "v4" ] }
rocket_prometheus = { git = "https://github.com/sd2k/rocket_prometheus", branch = "async" }
lazy_static = "1.3.0"
gettext-macros = "0.6"
gettext-utils = "0.1"
gettext = "0.4"
glob = "0.3"
rfc2047 = "0.1"
hyperx = "1.4"

[dependencies.rocket_i18n]
git = "https://github.com/Plume-org/rocket_i18n"
branch = "go-async"
default-features = false
features = ["rocket"]

[patch.crates-io]
gettext-macros = { git = "https://github.com/Valodim/gettext-macros", rev = "d15fa92ef6ac28269890557fe9c3767d01442633" }

[dependencies.lettre]
version = "0.10.0-pre"
default-features = false
# smtp-transport doesn't build (openssl problem)
features = ["builder", "file-transport", "sendmail-transport"]
git = "https://github.com/lettre/lettre"
rev = "245c600c82ee18b766e8729f005ff453a55dce34"

[build-dependencies]
vergen = "3"

[dev-dependencies]
regex = "1"

[[bin]]
name = "hagrid"
path = "src/main.rs"

[[bin]]
name = "hagrid-delete"
path = "src/delete.rs"
