[package]
name = "hagridctl"
version = "0.1.0"
authors = ["Vincent Breitmoser <look@my.amazin.horse>"]

[dependencies]
hagrid-database = { path = "../database" }
anyhow = "1"
sequoia-openpgp =  { version = "1.3", default-features = false, features = ["crypto-nettle"] }
multipart = "0"
log = "0"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
url = "1.6"
hex = "0.3"
base64 = "0.10"
pathdiff = "0.1"
idna = "0.1"
fs2 = "0.4"
walkdir = "2.2"
clap = "2"
toml = "0.5.0"
indicatif = "0.11.0"
